--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "vue": "^2.5.11",
+    "vue2-animate": "^2.0.0",
     "vuedraggable": "^2.16.0"
   },
   "browserslist": [
